Fixed issue where selecting two keywords was not working properly on Firefox. Disabled button text is now aligned right to get Sikuli matching working

--- a/Tests/test.css
+++ b/Tests/test.css
@@ -105,3 +105,7 @@ h1,h2,h3,h4,h5,h6 {
 td,th {
     min-width: 20px;
 }
+
+.Viper-button.Viper-disabled {
+    text-align: right;
+}
